--- a/site/index.html
+++ b/site/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Haus Frisur — Салон краси</title>
-    <link rel="stylesheet" href="../../../OneDrive/valentina-beauty/css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <script>
         function openImage(src) {
             document.getElementById("imageModal").style.display = "block";
@@ -19,7 +19,7 @@
 <body>
 <header>
     <a href="#hero">
-        <img src="logo.png" alt="Haus Frisur" class="logo">
+        <img src="../images/logo.png" alt="Haus Frisur" class="logo">
     </a>
     <nav>
         <a href="#about">Про мене</a>
@@ -92,12 +92,12 @@
 <section id="gallery">
     <h2>Галерея робіт</h2>
     <div class="gallery-grid">
-        <img src="../../../OneDrive/valentina-beauty/gallery/IMG_4301.JPEG" alt="pic0" onclick="openImage(this.src)">
-        <img src="../../../OneDrive/valentina-beauty/gallery/photo_2025-06-08_13-55-13.jpg" alt="pic1" onclick="openImage(this.src)">
-        <img src="../../../OneDrive/valentina-beauty/gallery/photo_2025-05-30_21-20-25.jpg" alt="pic2" onclick="openImage(this.src)">
-        <img src="../../../OneDrive/valentina-beauty/gallery/photo_2025-05-30_21-20-25%20(2).jpg" alt="pic3" onclick="openImage(this.src)">
-        <img src="../../../OneDrive/valentina-beauty/gallery/photo_2025-06-08_15-20-53.jpg" alt="pic4" onclick="openImage(this.src)">
-        <img src="../../../OneDrive/valentina-beauty/gallery/photo_2025-06-08_15-30-11.jpg" alt="pic5" onclick="openImage(this.src)">
+        <img src="/images/IMG_4301.JPEG" alt="pic0" onclick="openImage(this.src)">
+        <img src="/images/photo_2025-06-08_13-55-13.jpg" alt="pic1" onclick="openImage(this.src)">
+        <img src="/images/photo_2025-05-30_21-20-25.jpg" alt="pic2" onclick="openImage(this.src)">
+        <img src="/images/photo_2025-05-30_21-20-25%20(2).jpg" alt="pic3" onclick="openImage(this.src)">
+        <img src="/images/photo_2025-06-08_15-20-53.jpg" alt="pic4" onclick="openImage(this.src)">
+        <img src="/images/photo_2025-06-08_15-30-11.jpg" alt="pic5" onclick="openImage(this.src)">
     </div>
 
     <!-- модальне вікно -->
