--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Haus Frisur — Салон краси</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <script>
         function openImage(src) {
             document.getElementById("imageModal").style.display = "block";
@@ -19,7 +19,7 @@
 <body>
 <header>
     <a href="#hero">
-        <img src="../images/logo.png" alt="Haus Frisur" class="logo">
+        <img src="images/logo.png" alt="Haus Frisur" class="logo">
     </a>
     <nav>
         <a href="#about">Про мене</a>
