--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Haus Frisur — Салон краси</title>
+    <title>Манікюр Київ — Валентина Повстін</title>
+    <meta name="description" content="Манікюр, педикюр, покриття гель-лаком у Києві. Запис до майстра Валентини. Якісно, акуратно та безпечно.">
+    <meta name="keywords" content="манікюр Київ, майстер Валентина, гель-лак Київ, педикюр Київ, салон краси Київ">
     <link rel="stylesheet" href="css/styles.css">
     <script>
         function openImage(src) {
@@ -19,7 +21,7 @@
 <body>
 <header>
     <a href="#hero">
-        <img src="images/logo.png" alt="Haus Frisur" class="logo">
+        <img src="https://i.postimg.cc/3RDYh49c/logo.png" alt="Haus Frisur" class="logo">
     </a>
     <nav>
         <a href="#about">Про мене</a>
@@ -92,12 +94,12 @@
 <section id="gallery">
     <h2>Галерея робіт</h2>
     <div class="gallery-grid">
-        <img src="/images/IMG_4301.JPEG" alt="pic0" onclick="openImage(this.src)">
-        <img src="/images/photo_2025-06-08_13-55-13.jpg" alt="pic1" onclick="openImage(this.src)">
-        <img src="/images/photo_2025-05-30_21-20-25.jpg" alt="pic2" onclick="openImage(this.src)">
-        <img src="/images/photo_2025-05-30_21-20-25%20(2).jpg" alt="pic3" onclick="openImage(this.src)">
-        <img src="/images/photo_2025-06-08_15-20-53.jpg" alt="pic4" onclick="openImage(this.src)">
-        <img src="/images/photo_2025-06-08_15-30-11.jpg" alt="pic5" onclick="openImage(this.src)">
+        <img src="https://i.postimg.cc/qB8kqKXs/photo1.jpg" alt="pic0" onclick="openImage(this.src)">
+        <img src="https://i.postimg.cc/4xFGqQsg/photo2.jpg" alt="pic1" onclick="openImage(this.src)">
+        <img src="https://i.postimg.cc/c4h0MNz6/photo3.jpg" alt="pic2" onclick="openImage(this.src)">
+        <img src="https://i.postimg.cc/MKqzQGdh/photo4.jpg" alt="pic3" onclick="openImage(this.src)">
+        <img src="https://i.postimg.cc/mrz4s1gF/photo5.jpg" alt="pic4" onclick="openImage(this.src)">
+        <img src="https://i.postimg.cc/s2krDfMH/photo6.jpg" alt="pic5" onclick="openImage(this.src)">
     </div>
 
     <!-- модальне вікно -->
