--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Манікюр Київ — Валентина Повстін</title>
     <meta name="description" content="Манікюр, педикюр, покриття гель-лаком у Києві. Запис до майстра Валентини. Якісно, акуратно та безпечно.">
     <meta name="keywords" content="манікюр Київ, майстер Валентина, гель-лак Київ, педикюр Київ, салон краси Київ">
+    <meta name="google-site-verification" content="tbLzLKA4pqPkZox5crtDLd8BVrSBVNQMt7Pd6dw4Qes" />
     <link rel="stylesheet" href="css/styles.css">
     <script>
         function openImage(src) {
